# yasa

./: Makefile.am  Makefile.in  README  README.md  config.h.in  configure  configure.in
lib/: Makefile.am  Makefile.in
lib/libyasa/: Makefile.am  Makefile.in  alignment.h  arcadeparser.cc  arcadeparser.h  arcadeprinter.h  beamssf.cc  beamssf.h  bitextsynonymcontainer.cc  bitextsynonymcontainer.h  cesalignprinter.h  cesanaparser.cc  cesanaparser.h  churchgalescore.cc  churchgalescore.h  cognatefinder.h  cognatessf.cc  cognatessf.h  cognatessvalidator.cc  cognatessvalidator.h  cognatevalidator.cc  cognatevalidator.h  constantbeammarker.cc  constantbeammarker.h  dictionary.h  discreteline.cc  discreteline.h  doxyfile.en  doxyfile.fr  dynamictable.h  fe_sparse.h  felipescore.cc  felipescore.h  filter.cc  filter.h  friendlyprinter.h  japaexception.cc  japaexception.h  japaoptions.cc  japaoptions.h  (+47 more)
man/: Makefile.am  Makefile.in  yasa.man
src/: Makefile.am  Makefile.in  main.cc  scorecorpora.cc
