#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.57)
AC_INIT(yasa, 1.0)
AM_INIT_AUTOMAKE
AC_CONFIG_SRCDIR([lib/libyasa/prefixcognatefinder.h])
AC_CONFIG_SRCDIR([src/main.cc])
AM_CONFIG_HEADER(config.h)
##AC_CONFIG_AUX_DIR(config)

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC
AC_PROG_LIBTOOL

# Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS([stdlib.h string.h sys/time.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL
AC_C_CONST
AC_C_INLINE
AC_TYPE_SIZE_T

# Checks for library functions.
AC_FUNC_ERROR_AT_LINE
AC_FUNC_STRTOD
AC_CHECK_FUNCS([sqrt strcasecmp])

AC_CONFIG_FILES([Makefile lib/Makefile lib/libyasa/Makefile src/Makefile man/Makefile])
AC_OUTPUT
