## Makefile.am -- Process this file with automake to produce Makefile.in

#lib_LTLIBRARIES = libyasa.la

#libyasa_la_LDFLAGS = -version-info 1:0
noinst_LIBRARIES = libyasa.a

noinst_HEADERS= \
	alignment.h \
	arcadeparser.h \
	arcadeprinter.h \
	beamssf.h \
	bitextsynonymcontainer.h \
	cesalignprinter.h \
	cesanaparser.h \
	churchgalescore.h \
	cognatefinder.h \
	cognatessf.h \
	cognatessvalidator.h \
	cognatevalidator.h \
	constantbeammarker.h \
	dictionary.h \
	discreteline.h \
	dynamictable.h \
	japaexception.h \
	fe_sparse.h \
	felipescore.h \
	filter.h \
	friendlyprinter.h \
	japaoptions.h \
	japaprogram.h \
	japasynonymparser.h \
	linearssf.h \
	mapsetsearchspace.h \
	onesentperlineparser.h \
	options.h \
	point2d.h \
	prefixcognatefinder.h \
	raliparser.h \
	raliprinter.h \
	scorefunction.h \
	scoreprinter.h \
	searchspace.h \
	searchspacefiller.h \
	setsearchspace.h \
	solutionmarker.h \
	solutionprinter.h \
	sparsedt.h \
	statistic.h \
	synonymcontainer.h \
	synonymparser.h \
	text.h \
	textparser.h \
	toolbox.h \
	validator.h \
	wordcognatefinder.h \
	wordinfo.h \
	wordscorefunction.h \
	wordssf.h

#libyasa_la_SOURCES =
libyasa_a_SOURCES = \
	arcadeparser.cc \
	beamssf.cc \
	bitextsynonymcontainer.cc \
	cesanaparser.cc \
	churchgalescore.cc \
	cognatessf.cc \
	cognatessvalidator.cc \
	cognatevalidator.cc \
	constantbeammarker.cc \
	discreteline.cc \
	japaexception.cc \
	felipescore.cc \
	filter.cc \
	japaoptions.cc \
	japaprogram.cc \
	japasynonymparser.cc \
	linearssf.cc \
	mapsetsearchspace.cc \
	onesentperlineparser.cc \
	options.cc \
	prefixcognatefinder.cc \
	raliparser.cc \
	searchspace.cc \
	setsearchspace.cc \
	statistic.cc \
	text.cc \
	textparser.cc \
	toolbox.cc \
	wordcognatefinder.cc \
	wordinfo.cc \
	wordscorefunction.cc \
	wordssf.cc

EXTRA_DIST = doxyfile.en doxyfile.fr
